--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>This is my Second github repo</title>
 </head>
 <body>
-    
+    <h1>Trying to push github</h1>
+    <h2>Sending code on github</h2>
+    <h3>Let's try</h3>
 </body>
 </html>
