--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>This is my Second github repo</title>
+    <link rel="stylesheet" href="second.css">
 </head>
 <body>
     <h1>Trying to push github</h1>
     <h2>Sending code on github</h2>
     <h3>Let's try</h3>
+    <img src="car.jpg" alt="">
 </body>
 </html>
