--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h2>Sending code on github</h2>
     <h3>Let's try</h3>
     <img src="car.jpg" alt="">
+    <a href="www.google.com">click here to more</a>
+    <p>hello buddys whats upp</p>
 </body>
 </html>
